yamls/shop-app/keycloak-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-service-deployment
  labels:
    app: keycloak-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-service
  template:
    metadata:
      labels:
        app: keycloak-service
    spec:
      containers:
        - name: keycloak-service
          image: quay.io/keycloak/keycloak:13.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service-service
  labels:
    app: keycloak-service
spec:
  selector:
    app: keycloak-service
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
